Packzettel Import — archive consumed files as bytes, not UTF-8 text
The local archiver used Files.writeString(..., UTF_8), so any binary
payload (e.g. a PDF) written to the processed or error folder was
corrupted. archive() now takes byte[] and writes it verbatim via
Files.write().

The pre-transform payload exchange property is now always a byte[],
captured explicitly rather than relying on Camel's implicit
String->byte[] type conversion (whose default charset is not
guaranteed). The two existing text-shaped writers (SFTP polling, REST
dynamic) now UTF-8-encode the already-string body themselves before
setting the property, so their archived output is unchanged.